# seq-zipper

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.project  flake.nix  justfile  seq-zipper.cabal  seq-zipper.nix
.github/workflows/: build.yml  develop.yml  haskell-ci.yml
src/Data/Sequence/NonEmpty/: Zipper.hs
