cabal-version:          3.0
name:                   seq-zipper
version:                0.1.0.0
synopsis:               A non-empty comonadic Seq zipper.
license:                MIT
license-file:           LICENSE
author:                 Eric Meinhardt
maintainer:             ericmeinhardt@gmail.com
copyright:              2023
homepage:               https://github.com/emeinhardt/seq-zipper
bug-reports:            https://github.com/emeinhardt/seq-zipper/issues
category:               Data
build-type:             Simple
extra-doc-files:        CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/emeinhardt/seq-zipper/seq-zipper.git

common warnings
    ghc-options:  -Wall -Wdefault -Wno-orphans -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat

library
    import:             warnings
    hs-source-dirs:     src
    default-language:   GHC2021
    default-extensions:
      UnicodeSyntax
    other-extensions:
      NoImplicitPrelude
      DerivingVia
      DeriveAnyClass
      TypeFamilies
    exposed-modules:
      Data.Sequence.NonEmpty.Zipper
    build-depends:
        base                        >=4.16 && < 5.0
      , deepseq                     >=1.4  && < 1.5
      , base-unicode-symbols        >=0.2  && < 1.0
      , composition-prelude         >=3.0  && < 4.0
      , newtype-generics            >=0.6  && < 0.7
      , semigroupoids               ==5.3.7
      , containers                  >=0.6  && < 0.8
      , nonempty-containers         >=0.3  && < 0.4
      , comonad                     >=5.0  && < 6.0
      , monoid-subclasses           >=1.2  && < 1.3
